tests/baselines/reference/getAndSetNotIdenticalType3.errors.txt
==== tests/cases/compiler/getAndSetNotIdenticalType3.ts (5 errors) ====
    class A<T> { foo: T; }
    
    class C<T> {
        data: A<number>;
        get x(): A<number> {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        ~~~~~~~~~~~~~~~~~~~~
            return this.data;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2380: 'get' and 'set' accessor must have the same type.
        set x(v: A<string>) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        ~~~~~~~~~~~~~~~~~~~~~
            this.data = v;
    ~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~~~~
!!! error TS2322: Type 'A<string>' is not assignable to type 'A<number>':
!!! error TS2322:   Type 'string' is not assignable to type 'number'.
        }
    ~~~~~
!!! error TS2380: 'get' and 'set' accessor must have the same type.
    }
    
    var x = new C();
    var r = x.x;
    x.x = r;